temp: response_time_analysis

--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/background.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/background.tex
@@ -37,7 +37,7 @@
 \end{frame}
 
 \begin{frame}{[補足] DDS}
-    ノードのpublisherとsubscriberの間のメッセージ交換は、抽象DDS (Data Distribution Service) 層によって実現される
+    ノードのpublisherとsubscriberの間のメッセージ交換は，抽象DDS (Data Distribution Service) 層によって実現される
 
     \begin{block}{抽象DDS}
         DDS とクライアントライブラリ間の通信インターフェース
