--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/main.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/main.tex
@@ -27,7 +27,7 @@
 
 \input{background.tex}
 \input{system_model.tex}
-\input{responce_time_analysys.tex}
+\input{responce_time_analysis.tex}
 
 \lastpage
 
