--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/system_model.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/system_model.tex
@@ -109,7 +109,7 @@
     \begin{itemize}
         \item 実行時に, $J_{i}^{k}$ 内の最初のコールバックインスタンス $c_{i, 1}^{k}$ は, $J_{i}^{k}$ がリリースされるときにリリースされる
         \item $J_{i}^{k}$ 内の別のコールバックインスタンスは, その先行の終了時, つまり, 先行からの入力メッセージが利用可能になった時点でリリースされる
-        \item 同じコールバックの複数のインスタンスがリリースされた場合、リリース時刻を基準にFIFOにエンキューされる
+        \item 同じコールバックの複数のインスタンスがリリースされた場合，リリース時刻を基準にFIFOにエンキューされる
     \end{itemize}
 \end{frame}
 
@@ -117,8 +117,8 @@
 
 
     \begin{itemize}
-        \item コールバックインスタンス$c_{i, j}$は、それがリリースされ、その前のインスタンスがすべて実行中か終了しているとき、\al{pending} と呼ぶ
-        \item pendingコールバックインスタンス$c_{i, j}$は、\al{ready} または\al{P-blocked} のいずれかである
+        \item コールバックインスタンス$c_{i, j}$は，それがリリースされ，その前のインスタンスがすべて実行中か終了しているとき，\al{pending} と呼ぶ
+        \item pendingコールバックインスタンス$c_{i, j}$は，\al{ready} または\al{P-blocked} のいずれかである
               \begin{itemize}
                   \item  $c_{i, j}$ がmutually exclusive コールバックグループに属している場合, $c_{i, j}$ と同じコールバックグループ内のコールバックのインスタンス ($c_{i, j}$ 自体を含む) が実行されていない場合, $c_{i, j}$ はreadyである
                   \item それ以外の場合, $c_{i, j}$ は P-blockedされる
@@ -155,8 +155,8 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item $\Omega$ 内のeligibleなコールバックインスタンスは、$m$ 個のスレッドによって1つずつ選択され、ノンプリエンプティブに実行される
-        \item スレッドとは、処理リソースの観点から、対応するプロセッサを表すものである
+        \item $\Omega$ 内のeligibleなコールバックインスタンスは，$m$ 個のスレッドによって1つずつ選択され，ノンプリエンプティブに実行される
+        \item スレッドとは，処理リソースの観点から，対応するプロセッサを表すものである
     \end{itemize}
 \end{frame}
 
