--- a/setting.tex
+++ b/setting.tex
@@ -1,7 +1,6 @@
 \documentclass[aspectratio=169, dvipdfmx, 12pt, compress]{beamer}% dvipdfmxしたい
 
 
-
 %%%%% Packages %%%%%
 \usepackage{bxdpx-beamer}% dvipdfmxなので必要
 \usepackage{pxjahyper}% 日本語で'しおり'したい
@@ -13,93 +12,130 @@
 \usepackage{adjustbox}
 \usepackage{caption}
 \usepackage{ifthen}
+\usepackage{graphics}
 
 
 %%%%% Settings %%%%%
 \usetheme[sectionpage=progressbar, subsectionpage=progressbar]{metropolis}
-% block style
+% -- block style --
 \metroset{block=fill}
-% space between line
+% -- space between line --
 \renewcommand{\baselinestretch}{1.3}
-% space between item
+% -- space between item --
 \newlength{\wideitemsep}
 \setlength{\wideitemsep}{0.9\itemsep}
 % \addtolength{\wideitemsep}{1.0pt} <- more space
 \let\olditem\item
 \renewcommand{\item}{\setlength{\itemsep}{\wideitemsep}\olditem}
-% image border color
+% -- image border color --
 \renewcommand\fbox{\fcolorbox{black!20}{white}}
-% frame title
+% -- frame title --
 \definecolor{coolblack}{rgb}{0.0, 0.18, 0.39}
-\setbeamercolor{frametitle}{bg=coolblack!90,fg=white}
+\makeatletter
+\setbeamertemplate{frametitle}
+{
+    \ifbeamercolorempty[bg]{frametitle}{}{\nointerlineskip}%
+    \@tempdima=\textwidth%
+    \advance\@tempdima by\beamer@leftmargin%
+    \advance\@tempdima by\beamer@rightmargin%
+    \begin{beamercolorbox}[sep=0.3cm,left,wd=\the\@tempdima]{frametitle}
+        \vbox{}\vskip-1.8ex%
+        \if@tempswa\else\csname beamer@fteleft\endcsname\fi%
+        {\strut\color{coolblack!90}\bfseries\insertframetitle\strut\par%
+            {%
+                \ifx\insertframesubtitle\@empty%
+                    \else%
+                    {\usebeamerfont{framesubtitle}\usebeamercolor[fg]{framesubtitle}\insertframesubtitle\strut\par}%
+                \fi
+            }%
+            \vskip-2.0ex%
+            \rule{\dimexpr\paperwidth-0.6cm\relax}{0.4pt}}
+        \if@tempswa\else\vskip-.3cm\fi% set inside beamercolorbox... evil here...
+    \end{beamercolorbox}%
+    %
+}
+\makeatother
+\setbeamercolor{frametitle}{bg=black!2,fg=black}
 \setbeamerfont{frametitle}{size=\large}
 \addtobeamertemplate{frametitle}{}{\vspace{-1em}}
 \makeatletter
 \setlength{\metropolis@frametitle@padding}{1.4ex}% <- default 2.2 ex
-% foot line
+% -- foot line --
 \addtobeamertemplate{footline}{}{\vspace{-1em}}
-% normal text color
+% -- normal text color --
 \setbeamercolor{normal text}{fg=black!80}
-% progress bar
+% -- progress bar --
 \definecolor{lightgray}{rgb}{0.83, 0.83, 0.83}
 \setbeamercolor{progress bar}{bg=lightgray, fg=coolblack}
 \setbeamersize{text margin left=15pt, text margin right=15pt}
-% equation font
+% -- equation font --
 \usefonttheme{professionalfonts}
-% Change standard block width
+% -- block border --
+\useinnertheme[shadow,rounded]{tcolorbox}
+\makeatletter
+\tcbset{
+    boxrule=0pt,
+    borderline={1.5pt}{0pt}{beamer@tcb@titlebg}
+}
+\makeatother
+% -- Change standard block width --
 \addtobeamertemplate{block begin}{%
-    \centering
-    \begin{columns}\begin{column}{0.9\textwidth}
-            \centering
+    \vspace{-3mm}
+    \centering\begin{columns}\begin{column}{0.9\textwidth}\centering
             }{}
             \addtobeamertemplate{block end}{}{\end{column}\end{columns}}
-% Change alert block width
+% -- Change alert block width --
 \addtobeamertemplate{block alerted begin}{%
+    \vspace{-3mm}
     \centering
     \begin{columns}\begin{column}{0.9\textwidth}
             \centering
             }{}
             \addtobeamertemplate{block alerted end}{}{\end{column}\end{columns}}
-% Change example block width
+% -- Change example block width --
 \addtobeamertemplate{block example begin}{%
+    \vspace{-3mm}
     \centering
     \begin{columns}\begin{column}{0.9\textwidth}
             \centering
             }{}
             \addtobeamertemplate{block example end}{}{\end{column}\end{columns}}
-% Itemize color
+% -- Itemize color --
 \setbeamertemplate{itemize item}{\color{black}\scriptsize$\blacksquare$}
 \setbeamertemplate{itemize subitem}{\color{black}\scriptsize$-$}
-% Simplification  color
+% -- block color --
+\setbeamercolor{block title}{fg=black!80,bg=black!15}
+\setbeamercolor{block body}{fg=black!80,bg=white}
+% -- Simplification  color --
 \definecolor{cobalt}{rgb}{0.0, 0.28, 0.67}
-\setbeamercolor{block title example}{fg=black!80,bg=cobalt!35}
-\setbeamercolor{block body example}{fg=black,bg=cobalt!15}
-% Definition
+\setbeamercolor{block title example}{fg=black,bg=cobalt!20}
+\setbeamercolor{block body example}{fg=black!80,bg=white}
+% -- Definition --
 \BeforeBeginEnvironment{definition}{
-    \setbeamercolor{block title}{use=alerted text, bg=alerted text.fg!70,fg=white}
-    \setbeamercolor{block body}{use=alerted text, bg=alerted text.fg!20}
+    \setbeamercolor{block title}{use=alerted text, bg=alerted text.fg!50,fg=black}
+    \setbeamercolor{block body}{use=alerted text, fg=black!80,bg=white}
 }
 \AfterEndEnvironment{definition}{% return to default
     \setbeamercolor{block title}{use=structure,fg=structure.fg,bg=structure.fg!20!bg}
     \setbeamercolor{block body}{parent=normal text,use=block title,bg=block title.bg!50!bg, fg=black}
 }
-% Theorem
+% -- Theorem --
 \definecolor{seagreen}{rgb}{0.18, 0.55, 0.34}
 \setbeamertemplate{theorems}[numbered]
 \BeforeBeginEnvironment{theorem}{
-    \setbeamercolor{block title}{fg=black!80,bg=seagreen!40}
-    \setbeamercolor{block body}{fg=black,bg=seagreen!15}
+    \setbeamercolor{block title}{fg=black,bg=seagreen!40}
+    \setbeamercolor{block body}{fg=black!80,bg=white}
 }
 \AfterEndEnvironment{theorem}{% return to default
     \setbeamercolor{block title}{use=structure,fg=structure.fg,bg=structure.fg!20!bg}
     \setbeamercolor{block body}{parent=normal text,use=block title,bg=block title.bg!50!bg, fg=black}
 }
-% Lemma
+% -- Lemma --
 \undef{\lemma}
 \newtheorem{lemma}{\translate{Lemma}}
 \BeforeBeginEnvironment{lemma}{
-    \setbeamercolor{block title}{fg=black!80,bg=seagreen!20}
-    \setbeamercolor{block body}{fg=black,bg=seagreen!10}
+    \setbeamercolor{block title}{fg=black,bg=seagreen!20}
+    \setbeamercolor{block body}{fg=black!80,bg=white}
 }
 \AfterEndEnvironment{lemma}{% return to default
     \setbeamercolor{block title}{use=structure,fg=structure.fg!80,bg=structure.fg!20!bg}
@@ -111,17 +147,21 @@
 \newcommand{\subt}[1]{\vspace{-2mm}{\fontsize{10pt}{0cm}\selectfont \textcolor{lightgray}{#1}}\vspace{-1mm}}
 \newcommand{\lastpage}[0]{\begin{frame}\begin{textblock*}{1.0\linewidth}(0pt, 50pt)\includegraphics[scale=0.512]{\beamerDir/master_figure/last.pdf}\end{textblock*}\end{frame}}
 \newcommand{\todo}[1]{\al{\LARGE\textbf{TODO:} #1}}
-\newcommand{\headerheight}[0]{7mm}
-\newcommand{\footerheight}[0]{5mm}
+\newcommand{\headerheight}[0]{8mm}
+\newcommand{\footerheight}[0]{3mm}
 \newcommand{\slideheight}[0]{\textheight-\headerheight-\footerheight}
 \newcommand{\tabml}[1]{\hspace{-2.1mm}\begin{tabular}{l} #1 \end{tabular}}
 \newcommand{\al}[1]{\alert{#1}}
 \newcommand{\argempty}[0]{}
 \newcommand{\full}[1]{
-    \vspace{\headerheight}
-    \begin{minipage}[c][\slideheight][c]{\textwidth}
-        #1
-    \end{minipage}
+    \centering
+    \begin{columns}
+        \begin{column}{\textwidth}
+            \begin{minipage}[t][\textheight][c]{\textwidth}
+                #1
+            \end{minipage}
+        \end{column}
+    \end{columns}
 }
 \newcommand{\fullimage}[1]{
     \full{
@@ -151,7 +191,6 @@
     }%
     \setlength\fitimageht{\textheight}%
     \addtolength\fitimageht{-\fitotherht-\headerheight-\footerheight-1\baselineskip}%
-    \vspace{\headerheight}
     #1\par
     \centering
     \fbox{\includegraphics[width=\textwidth,height=\fitimageht,keepaspectratio]{#2}}
@@ -164,15 +203,15 @@
     \end{exampleblock}
 }
 % Re-post
-\setbeamercolor{RepostBox}{fg=black!50, bg=coolblack!10}
+\setbeamercolor{RepostBox}{fg=black!50, bg=coolblack!5}
 \newcommand{\repost}[1]{
     \vspace{2mm}
     \centering
     \begin{columns}
         \begin{column}{0.86\textwidth}
-            \begin{beamercolorbox}[wd=\textwidth, sep=2pt, rounded=true, shadow=true]{RepostBox}
+            \begin{beamercolorbox}[wd=\textwidth, sep=1pt, rounded=true, shadow=true]{RepostBox}
                 \begin{tabular}{|p{0.95\textwidth}}
-                    {\fontsize{10pt}{10pt}#1}
+                    {\small #1}
                 \end{tabular}
             \end{beamercolorbox}
         \end{column}
