--- a/setting.tex
+++ b/setting.tex
@@ -13,6 +13,7 @@
 \usepackage{caption}
 \usepackage{ifthen}
 \usepackage{graphics}
+\usepackage{hyperref}
 
 
 %%%%% Settings %%%%%
@@ -50,7 +51,7 @@
             }%
             \vskip-2.0ex%
             \rule{\dimexpr\paperwidth-0.6cm\relax}{0.4pt}}
-        \if@tempswa\else\vskip-.3cm\fi% set inside beamercolorbox... evil here...
+        \if@tempswa\else\vskip-.3cm\fi
     \end{beamercolorbox}%
     %
 }
