--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/the_second_boud.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/the_second_boud.tex
@@ -130,23 +130,26 @@
 \label{ssec: callbacks_that_may_be_blocked}
 
 \begin{frame}{}
-\begin{itemize}
-    \item 以下では, $\mathcal{G}\left(c_{i}\right) \in \cup_{\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}} \theta_{k}$, つまり $c_{i}$ がブロックされる可能性がある $c_{i}$ へのサブシーケンスの制約の導出に焦点を当てる． $c_{i}$ がブロックされている場合, $\Omega$ が何度も更新される可能性があることに注意．さらに, $c_{i}$ が $\Omega$ に追加された後, 優先度の低いコールバック インスタンスによって $c_{i}$ がブロックされる可能性があるため, 遅延することもある．そのため, 前のセクションで行ったように, $\left[r_{i}, s_{i}\right)$ 中のポーリング ポイントの数を制限することは困難である
-\end{itemize}
+    \begin{itemize}
+        \item 以下では, $\mathcal{G}\left(c_{i}\right) \in \cup_{\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}} \theta_{k}$, つまり $c_{i}$ がブロックされる可能性がある $c_{i}$ へのサブシーケンスの制約の導出に焦点を当てる
+        \item $c_{i}$ がブロックされている場合, $\Omega$ が何度も更新される可能性があることに注意
+        \item さらに, $c_{i}$ が $\Omega$ に追加された後, 優先度の低いコールバックインスタンスによって $c_{i}$ がブロックされる可能性があるため, 遅延することもある
+        \item そのため, 前のセクションで行ったように, $\left[r_{i}, s_{i}\right)$ 中のポーリングポイントの数を制限することは困難である
+    \end{itemize}
 \end{frame}
 
 \begin{frame}{Lemma9}
-\begin{lemma}[]
-    $\mathcal{G}\left(c_{i}\right) \in \cup_{\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}} \theta_{k}$ と, $\mathcal{C}_{k}$ からの 2 つ以上のコールバックが $\left[r_{i}, s_{i}\right)$ の間に実行される場合, 最初のコールバックを除くそれぞれのコールバックは, $c_{i}$ とは異なるコールバック グループに属しているか, $c_{i}$ よりも高い優先順位を持っている必要がある．
-\end{lemma}
+    \begin{lemma}[]
+        $\mathcal{G}\left(c_{i}\right) \in \cup_{\forall \mathcal{C}_{k} \in \Gamma \backslash\{\mathcal{C}\}} \theta_{k}$ と, $\mathcal{C}_{k}$ からの 2 つ以上のコールバックが $\left[r_{i}, s_{i}\right)$ の間に実行される場合, 最初のコールバックを除くそれぞれのコールバックは, $c_{i}$ とは異なるコールバックグループに属しているか, $c_{i}$ よりも高い優先順位を持っている必要がある．
+    \end{lemma}
 \end{frame}
 
 \begin{frame}{Lemma9 証明}
-\todo{}
+    \todo{}
 \end{frame}
 
 \begin{frame}{Lemma10}
-\begin{lemma}[]
-    上記の補題によると, $c_{i}$ と同じコールバック グループに属し, $c_{i}$ よりも優先度が低い $\mathcal{C}_{k}$ からのコールバック インスタンスは, $\left[r_{i}, s_{i}\right)$ 中に実行される $\mathcal{C}_{k}$ からの最初のコールバック インスタンスである場合にのみ, $\mathcal{I}_{i, k}^{\mathcal{B}}$ に貢献できる．
-\end{lemma}
+    \begin{lemma}[]
+        上記の補題によると, $c_{i}$ と同じコールバックグループに属し, $c_{i}$ よりも優先度が低い $\mathcal{C}_{k}$ からのコールバックインスタンスは, $\left[r_{i}, s_{i}\right)$ 中に実行される $\mathcal{C}_{k}$ からの最初のコールバックインスタンスである場合にのみ, $\mathcal{I}_{i, k}^{\mathcal{B}}$ に貢献できる．
+    \end{lemma}
 \end{frame}
