--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/system_model.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/system_model.tex
@@ -200,7 +200,7 @@
 \end{frame}
 
 \begin{frame}{R-blocked 例}
-    \fullimage{figure/system_model_example_sup1.png}
+    \fullimage{figure/system_model_example_sup1.jpg}
 \end{frame}
 
 \begin{frame}{}
