--- a/setting.tex
+++ b/setting.tex
@@ -1,9 +1,9 @@
-\documentclass[aspectratio=169, dvipdfmx, 12pt, compress]{beamer}% dvipdfmxしたい
+\documentclass[aspectratio=169, dvipdfmx, 12pt, compress]{beamer}
 
 
 %%%%% Packages %%%%%
-\usepackage{bxdpx-beamer}% dvipdfmxなので必要
-\usepackage{pxjahyper}% 日本語で'しおり'したい
+\usepackage{bxdpx-beamer}
+\usepackage{pxjahyper}
 \usepackage{tikz}
 \usepackage{tcolorbox}
 \usetikzlibrary{shapes}
@@ -18,8 +18,6 @@
 
 %%%%% Settings %%%%%
 \usetheme[sectionpage=progressbar, subsectionpage=progressbar]{metropolis}
-% -- block style --
-\metroset{block=fill}
 % -- space between line --
 \renewcommand{\baselinestretch}{1.3}
 % -- space between item --
@@ -28,6 +26,9 @@
 % \addtolength{\wideitemsep}{1.0pt} <- more space
 \let\olditem\item
 \renewcommand{\item}{\setlength{\itemsep}{\wideitemsep}\olditem}
+% -- Itemize style --
+\setbeamertemplate{itemize item}{\color{black}\scriptsize$\blacksquare$}
+\setbeamertemplate{itemize subitem}{\color{black}\scriptsize$-$}
 % -- image border color --
 \renewcommand\fbox{\fcolorbox{black!20}{white}}
 % -- frame title --
@@ -71,6 +72,8 @@
 \setbeamersize{text margin left=15pt, text margin right=15pt}
 % -- equation font --
 \usefonttheme{professionalfonts}
+% -- block style --
+\metroset{block=fill}
 % -- block border --
 \useinnertheme[shadow,rounded]{tcolorbox}
 \makeatletter
@@ -101,13 +104,10 @@
             \centering
             }{}
             \addtobeamertemplate{block example end}{}{\end{column}\end{columns}}
-% -- Itemize color --
-\setbeamertemplate{itemize item}{\color{black}\scriptsize$\blacksquare$}
-\setbeamertemplate{itemize subitem}{\color{black}\scriptsize$-$}
 % -- block color --
 \setbeamercolor{block title}{fg=black!80,bg=black!15}
 \setbeamercolor{block body}{fg=black!80,bg=white}
-% -- Simplification  color --
+% -- Simplification color --
 \definecolor{cobalt}{rgb}{0.0, 0.28, 0.67}
 \setbeamercolor{block title example}{fg=black,bg=cobalt!20}
 \setbeamercolor{block body example}{fg=black!80,bg=white}
@@ -145,7 +145,6 @@
 
 
 %%%%% Original Command %%%%%
-\newcommand{\subt}[1]{\vspace{-2mm}{\fontsize{10pt}{0cm}\selectfont \textcolor{lightgray}{#1}}\vspace{-1mm}}
 \newcommand{\lastpage}[0]{\begin{frame}\begin{textblock*}{1.0\linewidth}(0pt, 50pt)\includegraphics[scale=0.512]{\beamerDir/master_figure/last.pdf}\end{textblock*}\end{frame}}
 \newcommand{\todo}[1]{\al{\LARGE\textbf{TODO:} #1}}
 \newcommand{\headerheight}[0]{8mm}
@@ -153,7 +152,6 @@
 \newcommand{\slideheight}[0]{\textheight-\headerheight-\footerheight}
 \newcommand{\tabml}[1]{\hspace{-2.1mm}\begin{tabular}{l} #1 \end{tabular}}
 \newcommand{\al}[1]{\alert{#1}}
-\newcommand{\argempty}[0]{}
 \newcommand{\full}[1]{
     \centering
     \begin{columns}
